--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,166 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: sans-serif;
+  background: #fafafa;
 }
+.navbar {
+  width: 100%;
+  height: 60px;
+  background: linear-gradient(to right, #2778d4, #7336e6);
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar_container {
+  width: 1200px;
+  max-width: 1200px;
+  margin: 0 auto;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 60px;
+}
+.navbar_logo {
+  flex: 1;
+  color: whitesmoke;
+  font-size: 20px;
+}
+.navbar_links {
+  flex: 1;
+  text-align: right;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar_links li {
+  list-style-type: none;
 }
+.navbar_btn {
+  height: 35px;
+  border: none;
+  padding: 0 10px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  background-color: coral;
+  color: azure;
+  font-size: 14px;
+  cursor: pointer;
+}
+.navbar_img {
+  width: 38px;
+  height: 38px;
+  display: block;
+  overflow: hidden;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+.navbar_img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.messages {
+  width: 1200px;
+  max-width: 1200px;
+  position: fixed;
+  left: 0;
+  right: 0;
+  background: #fff;
+  height: 85vh;
+  margin: 60px auto;
+  padding: 20px;
+  overflow: auto;
+}
+.input_form {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-width: 1200px;
+  min-width: 390px;
+  margin: 0 auto;
+}
+.input {
+  width: 100%;
+  height: 50px;
+  background: #fff;
+  border: 1px solid #efefef;
+  outline: none;
+  padding: 0 15px;
+}
+.messages_other {
+  display: flex;
+}
+.messages_img {
+  width: 38px;
+  height: 38px;
+  display: block;
+  overflow: hidden;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+.messages_img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.messages_msg {
+  width: 400px;
+  padding-left: 10px;
+  margin-top: 7px;
+}
+.messages_msg span {
+  display: block;
+  text-transform: capitalize;
+}
+.messages_msg p {
+  display: inline-block;
+  color: #000;
+  background-color: #efefef;
+  padding: 10px;
+  font-size: 15px;
+  border-radius: 5px;
+  margin-top: 8px;
+}
+.messages_my {
+  display: flex;
+  justify-content: flex-end;
+}
+.messages_my-p {
+  width: 400px;
+  text-align: right;
+  margin-top: 7px;
+}
+.messages_my-p p {
+  display: inline-block;
+  background: linear-gradient(to right, #2778d4, #7336e6);
+  color: #fff;
+  padding: 10px;
+  font-size: 15px;
+  border-radius: 5px;
+  margin-top: 8px;
+}
+.welcome {
+  background: #fff;
+  width: 1200px;
+  margin: 90px auto;
+  padding: 20px;
+}
+.welcome h1 {
+  margin-top: 15px;
+}
+@media (max-width: 765px) {
+  .navbar_container {
+    width: 500px;
+    max-width: 500px;
+    padding: 0 20px;
   }
-  to {
-    transform: rotate(360deg);
+  .messages {
+    width: 90%;
   }
 }
